<resources>
    <string name="app_name">RecipeApp</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_description">Recipe Description</string>
    <string name="recipe_name1">Recipe Name</string>
    <string name="Login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="add_recipe">Add recipe</string>
    <string name="preparation_time">Preparation Time</string>
    <string name="submit_recipe">Submit Recipe</string>
    <string name="recipe_author">Recipe Author</string>
    <string name="recipe_preparation_time">Recipe Preparation Time</string>
    <string name="exit">Exit</string>
</resources>