<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/recipeNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_name" />

    <EditText
        android:id="@+id/recipeDescriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_description"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/recipePreparationTimeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/preparation_time" />

    <Button
        android:id="@+id/submitRecipeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_recipe"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/exitAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
